<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <GVL Name="GVL" Id="{913e21aa-a47e-444c-bfce-679b16c0434b}">
    <Declaration><![CDATA[VAR_GLOBAL
	nHomingError:UDINT:=16#14D00;
	axes			:	ARRAY [1..GVL.axisNum] OF ST_AxisStruct;	//Global array of axisControl structure for holding axis parameters and controls
	iAxis			:	UINT;	 									//Index for running axis
	//indexer			:	ARRAY [1..GVL.axisNum] OF IndexerStruct;
	
END_VAR

VAR_GLOBAL CONSTANT
	axisNum	:	UINT:=2;
	//axisCoupleMax	:	UINT:=4;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>